# AgentDB

./: .gitignore  README.md  package.json  requirements.txt
agentdb/: __init__.py  cli.py  consolidation.py  context.py  crud.py  database.py  embeddings.py  file_processor.py  git_sync.py  markdown_parser.py  mcp_server.py  middleware.py  migration.py  scheduler.py  schema.py  server.py  skill_executor.py  sleep.py  workspace_scanner.py
agentdb/static/: index.html
agentdb/static/css/: main.css
agentdb/static/js/: app.js
agentdb/static/js/views/: audit.js  channels.js  chat.js  connect.js  dashboard.js  dbconsole.js  editor.js  feedback.js  import.js  mcp.js  memories.js  mindmap.js  notifications.js  scheduler.js  settings.js  skills.js  tasks.js  threads.js
docs/: API_REFERENCE.md  ARCHITECTURE.md  AgentDB_PRD.docx  AgentDB_PRD_v1.3.md  AgentDB_PRD_v1.4.md  DEVELOPMENT.md  QUICKSTART.md  SCHEMA_REFERENCE.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md
src-tauri/src/: main.rs
